# child-grpc4bmi

./: Dockerfile  README.md
.github/workflows/: release.yml  test.yml
examples/: README.md  child.in  requirements.txt  run-model-through-grpc4bmi.ipynb  run-model-through-grpc4bmi.py  xy_coords.npz
server/: CMakeLists.txt  child-grpc4bmi-server.cxx
